# oversight

./: .gitignore  Dockerfile.api  Paper.py  PaperDatabase.py  PaperRepository.py  README.md  README.zh.md  agent_retrieval_merge.py  docker-compose.yml  env.sh  environment.local.yml  example.env  flask_app.py  linear_rag_search.py  pyproject.toml  query_decomposition_agent.py  recompute_final_query_2602_metrics.py  requirements.local.txt  reranker.py  run_final_query_2602_linear_rag.py  run_query_flat_retrieval_linear_rag.py  search.py  start_oversight.sh  streamlit_app.py
LinearRAG/src/: ner.py
agent_scrapers/: test_vldb_scraper.py
final_query_2602/: sampled_multi_paper_entities_n0_output.json  sampled_multi_paper_entities_n1_output.json  sampled_multi_paper_entities_n2_output.json
final_query_2602/linear_rag_results/: linear_rag_eval_summary.json  n0_linear_rag_eval.json  n1_linear_rag_eval.json  n2_linear_rag_eval.json
final_query_2602/v0/: linear_rag_eval_summary.json  n0_linear_rag_eval.json  n1_linear_rag_eval.json  n2_linear_rag_eval.json
final_query_2602/v1/: linear_rag_eval_summary.json  n0_linear_rag_eval.json  n1_linear_rag_eval.json  n2_linear_rag_eval.json
frontend/: next.config.js  package.json
frontend/components/: AuthorPapersDialog.tsx
frontend/lib/: llmEfficiencyDemo.ts  mockPapers.ts
frontend/pages/: _document.tsx  index.tsx
oversight/: __init__.py  agent_retrieval_merge.py  linear_rag_search.py  query_decomposition_agent.py
scripts/eval/: multi_hop_recompute.py  (+2 more)
tests/: test_flask_search_agent.py  test_query_decomposition_agent.py
(+18 files in other folders)
